--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <title>Denny Nuryanto - Portofolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
+        .warning-box {
+    background-color: #fff3cd;
+    border: 1px solid #ffeeba;
+    color: #856404;
+    padding: 15px;
+    border-radius: 10px;
+    margin: 15px 0;
+    font-size: 15px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+}
+.warning-box strong {
+    display: block;
+    margin-bottom: 5px;
+    font-size: 16px;
+}
         /* Variabel CSS */
         :root {
             --primary: #2c3e50;
@@ -664,6 +679,21 @@
             .modal-links {
                 flex-direction: column;
             }
+            .warning-box {
+    background-color: #fff3cd;
+    border: 1px solid #ffeeba;
+    color: #856404;
+    padding: 15px;
+    border-radius: 10px;
+    margin: 15px 0;
+    font-size: 15px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+}
+.warning-box strong {
+    display: block;
+    margin-bottom: 5px;
+    font-size: 16px;
+}
             
         }
     </style>
@@ -870,6 +900,10 @@
     <section id="contact" class="section">
         <div class="container">
             <h2 class="section-title">Hubungi Saya</h2>
+            <div class="warning-box">
+    <strong>⚠️ Perhatian!</strong>
+           <p>Jika muncul error saat kirim pesan, abaikan saja. Pesan Anda sudah terkirim.</p>
+</div> <br>
             <div class="contact-content">
                 <div class="contact-info">
                     <div class="contact-item">
